--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
@@ -1,4 +1,4 @@
-﻿@using WebAppService.Models.Updates
+﻿@using WebAppService.Models
 @model WebNguoiDungQuanTri
 
 <aside class="left-sidebar with-vertical">
@@ -120,6 +120,14 @@
                             <iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
                         </span>
                         <span class="hide-menu">FAQS</span>
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a class="sidebar-link" href="/Admin/AboutUs/AboutUs" id="get-url" aria-expanded="false">
+                        <span>
+                            <iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
+                        </span>
+                        <span class="hide-menu">Về chúng tôi</span>
                     </a>
                 </li>
                 @* <li class="sidebar-item">
