--- a/WebAppService/Views/Doctor/DoctorDetail.cshtml
+++ b/WebAppService/Views/Doctor/DoctorDetail.cshtml
@@ -1,37 +1,36 @@
-﻿
-@using WebAppService.Models
+﻿@using WebAppService.Models
 
 <link href="~/web/assets/css/doctor-detail.css" rel="stylesheet" />
 
 <div class="container_detail_doctor">
-        
+
     <div class="profile-container">
         <div class="row">
-        <div class="profile-image col-md-6 col-12">
-            <img src="@Model.UrlImage" alt="@Model.HoTen" class="profile-photo"/>
-            <div class="degree-title">@Model.ChucDanh</div>
-        </div>
-        <div class="profile-info col-md-6 col-12">
-        <h2 class="name">@Model.HoTen</h2>
-        <h4 class="department">@Model.DonViKhoa </h4>
-
-            <div class="section">
-                <h3><i class="fas fa-graduation-cap text_title"></i> Bằng cấp – Học vị</h3>
-                <p>@Model.BangCapHocVi</p>
+            <div class="profile-image col-md-6 col-12">
+                <img src="@Model.UrlImage" alt="@Model.HoTen" class="profile-photo" />
+                <div class="degree-title">@Model.ChucDanh</div>
             </div>
+            <div class="profile-info col-md-6 col-12">
+                <h2 class="name">@Model.HoTen</h2>
+                <h4 class="department">@Model.DonViKhoa </h4>
 
-            <div class="section">
-                <h3><i class="fas fa-globe text_title"></i> Ngôn ngữ</h3>
-                <p>@Model.NgonNgu</p>
-            </div>
+                <div class="section">
+                    <h3><i class="fas fa-graduation-cap text_title"></i> Bằng cấp – Học vị</h3>
+                    <p>@Model.BangCapHocVi</p>
+                </div>
 
-            <div class="section">
-                <h3><i class="fas fa-user icon text_title"></i> Kinh nghiệm làm việc</h3>
-                <ul>
-                    @Model.KinhNghiemLamViec
-                </ul>
+                <div class="section">
+                    <h3><i class="fas fa-globe text_title"></i> Ngôn ngữ</h3>
+                    <p>@Model.NgonNgu</p>
+                </div>
+
+                <div class="section">
+                    <h3><i class="fas fa-user icon text_title"></i> Kinh nghiệm làm việc</h3>
+                    <ul>
+                        @Model.KinhNghiemLamViec
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-        </div>
 </div>
