--- a/WebAppService/Areas/Admin/Views/Shared/CustomMenu/_ViewCustom.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/CustomMenu/_ViewCustom.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WebAppService.Areas.Admin._Helper
-@using WebAppService.Models.Updates
+@using WebAppService.Models
 @{
 	var user = SessionHelper.GetUser(Context.Session) ?? null;
 	var data = new WebNguoiDungQuanTri
