--- a/WebAppService/Areas/Admin/Views/Shared/_ViewAdmin.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_ViewAdmin.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WebAppService.Areas.Admin._Helper
-@using WebAppService.Models.Updates
+@using WebAppService.Models
 @{
 	var user = SessionHelper.GetUser(Context.Session) ?? null;
 	var data = new WebNguoiDungQuanTri
@@ -82,6 +82,7 @@
 	<script src="~/assets/libs/sweetalert2/dist/sweetalert2.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.5/signalr.min.js"></script>
 	<script src="~/assets/plug/mustache.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/dot/doT.min.js"></script>
 	<script src="~/assets/js/plugins/toastr-init.js"></script>
 	<script src="~/ajax/webappservice.realtimenotify.js"></script>
 	<script src="~/ajax/webappservice.settings.js"></script>
